add header and footer

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,12 @@
   <title>Portfolio</title>
 </head>
 <body>
+  <header>
+    <h1>Note</h1>
+  </header>
+
+  <footer>
+    <div id="author">Tielin Li</div>
+  </footer>
 </body>
 </html>
