--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,18 @@
     <h1>Note</h1>
   </header>
 
+  <main>
+    <ul class="list-items">
+      <li>
+        <input type="text" class="title">
+        <textarea class="content"></textarea>
+        <button class="btn-show-text"></button>
+        <button class="edit">Edit</button>
+        <button class="remove">X</button>
+      </li>
+    </ul>
+  </main>
+  
   <footer>
     <div id="author">Tielin Li</div>
   </footer>
