--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -25,5 +26,6 @@
   <footer>
     <div id="author">Tielin Li</div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
