--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Note</h1>
+    <h1 class="page-title">Note</h1>
   </header>
 
   <main>
     <ul class="list-items">
       <li>
-        <input type="text" class="title">
-        <textarea class="content"></textarea>
+        <input type="text" class="title" value="first">
+        <input type="text" class="content" value="first content">
         <button class="btn-show-text"></button>
         <button class="edit">Edit</button>
         <button class="remove">X</button>
