--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <ul class="list-items">
       <li>
         <input type="text" class="title" value="first">
-        <input type="text" class="content" value="first content">
+        <textarea type="text" class="content"></textarea>
         <button class="btn-show-text"></button>
-        <button class="edit">Edit</button>
-        <button class="remove">X</button>
+        <button class="btn-edit">Edit</button>
+        <button class="btn-remove">X</button>
       </li>
     </ul>
   </main>
