position buttons in each li

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <li>
         <input type="text" class="title" value="first">
         <textarea type="text" class="content"></textarea>
-        <button class="btn-show-text"></button>
+        <button class="btn-show-text">More</button>
         <button class="btn-edit">Edit</button>
         <button class="btn-remove">X</button>
       </li>
