--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 <body>
   <header>
     <h1 class="page-title">Note</h1>
+    <form>
+      <input type="text" placeholder="note name" class="form-title">
+      <input type="text" placeholder="note content" class="form-content">
+      <input type="submit" value="create">
+    </form>
   </header>
 
   <main>
@@ -25,6 +30,7 @@
   
   <footer>
     <div id="author">Tielin Li</div>
+    <button class="btn-add-list">+</button>
   </footer>
   <script src="main.js"></script>
 </body>
