modify html file link to js file

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="all.css">
+  <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
   <header>
@@ -32,6 +32,6 @@
     <div id="author">Tielin Li</div>
     <button class="btn-add-list">+</button>
   </footer>
-  <script src="all.js"></script>
+  <script src="css/all.js"></script>
 </body>
 </html>
