style the btn make page responsive

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1 class="page-title">Note</h1>
-    <form>
+    <form class="hidden">
       <input type="text" placeholder="note name" class="form-title">
       <input type="text" placeholder="note content" class="form-content">
       <input type="submit" value="create">
