make add note btn works

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   <main>
     <ul class="list-items">
       <li>
-        <input type="text" class="title" value="first">
-        <textarea type="text" class="content"></textarea>
+        <input type="text" class="title" placeholder="Enter the title">
+        <textarea type="text" class="content" placeholder="Enter the content"></textarea>
         <button class="btn-edit">Edit</button>
         <button class="btn-remove">X</button>
       </li>
